data/derived/comb/progs/unify/prog2368.ml.out
Characters 94-99:
  let f a x = if x = "a" then a ^ x in
                              ^^^^^
Error: This expression has type string but an expression was expected of type
         unit
